Update dockerfile
Test 1.6